--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "apsl-react-native-button": "^3.0.1",
     "react": "15.3.1",
     "react-native": "0.32.0",
+    "react-native-google-signin": "^0.8.1",
     "react-native-nav": "^1.1.4",
     "react-native-navbar": "^1.5.0",
     "react-native-smart-splash-screen": "^1.0.7",
